# python-socketio-sender-receiver-base

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  config.py  run_receiver.py  run_sender.py  run_server.py
src/socketio_client/receiver/: registry.py
src/socketio_client/receiver/enum/: ReceiverEvent.py  ReceiverNamespace.py
src/socketio_client/receiver/handler/: ConnectHandler.py  ConnectionConfirmedHandler.py  DisconnectHandler.py
src/socketio_client/sender/: registry.py
src/socketio_client/sender/enum/: SenderEvent.py  SenderNamespace.py
src/socketio_client/sender/handler/: ConnectHandler.py  ConnectionConfirmedHandler.py  DisconnectHandler.py
src/socketio_client/shared/base/: BaseEventRegistry.py
src/socketio_client/shared/enum/: BaseEvent.py  BaseNamespace.py
src/socketio_client/shared/interface/: IEventHandler.py
src/socketio_server/main/: registry.py
src/socketio_server/main/enum/: MainEvent.py  MainNamespace.py
src/socketio_server/main/handler/: ConnectHandler.py  DisconnectHandler.py
src/socketio_server/shared/base/: BaseEventRegistry.py
src/socketio_server/shared/enum/: BaseEvent.py  BaseNamespace.py
src/socketio_server/shared/interface/: IEventHandler.py
