[project]
name = "Websocket-Demo"
version = "0.1.0"
description = ""
requires-python = ">=3.12,<4.0"

dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.128.0",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "python-socketio>=5.16.0",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
    "websocket-client>=1.9.0",
]

[tool.uv]
dev-dependencies = [
    "pipdeptree==2.26.1",
]
